2004-03-14  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c: Include <errno.h>.  Reported by Bernd Kuhls.

2004-02-18  Werner Koch  <wk@gnupg.org>

	* libassuan-config.in: Ignore setting of --prefix.

	* assuan-handler.c (assuan_get_data_fp): Fail with ENOSYS if we
	can't implement this.

2004-02-15  Werner Koch  <wk@gnupg.org>

	* memrchr.c (memrchr): Fixed implementation. Taken from gpgme.

2004-02-13  Werner Koch  <wk@gnupg.org>

	* assuan-domain-connect.c: Removed the unneeded alloca.h.

2004-01-24  Werner Koch  <wk@gnupg.org>

	* assuan-pipe-connect.c (assuan_pipe_connect2): New as an
	extension of assuan_pipe_connect. Made the latter call this one.

2004-01-14  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (_assuan_cookie_write_data): Return the
	requested size to indicate successful operation.  Fixes a spurious
	bug we previously fixed using fflush().

2003-12-22  Werner Koch  <wk@gnupg.org>

	* assuan.h (ASSUAN_Locale_Problem): Added.
	* assuan-errors.c (assuan_strerror): Ditto.

2003-12-18  Werner Koch  <wk@gnupg.org>

	* assuan.h (AssuanCommand): Clarified that these are now
	deprecated and actually useless.
	(assuan_error_t): Clarified and added ASSUAN_USER_ERROR_FIRST,
	ASSUAN_USER_ERROR_LAST.

2003-12-16  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c: Changed formatting of the debug output prefix.
	* assuan-util.c (assuan_set_log_stream): Set global log stream if
	it has not been done yet.
	* assuan-logging.c (_assuan_set_default_log_stream): New.
	(assuan_set_assuan_log_prefix): New.

2003-12-11  Werner Koch  <wk@gnupg.org>

	* funopen.c (_assuan_funopen): Renamed from funopen, to keep the
	name space clean and avoid duplicate definitions if another
	library uses the same replacement.
	* assuan-defs.h (funopen): Renamed prototype and add a macro.

2003-12-08  Werner Koch  <wk@gnupg.org>

	* TODO: Removed.

2003-11-12  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (process_request): Kludge to print better error